--- a/dxapp.json
+++ b/dxapp.json
@@ -1,7 +1,7 @@
 {
-  "name": "vcf_trimmer",
-  "title": "VCF Trimmer",
-  "summary": "Trims VCFs by removing unwanted INFO and FORMAT fields, splits multi-allelic sites, and applies filters to VCFs.",
+  "name": "vcf_splitter_variantqcer",
+  "title": "vcf_splitter_variantqcer",
+  "summary": "Trims VCFs by removing unwanted INFO and FORMAT fields, splits multi-allelic sites, and applies variant-level filters to VCFs.",
   "dxapi": "1.0.0",
   "version": "0.0.1",
   "inputSpec": [
